overview: Call grid shutdown when closing last window.

OnGridEmpty which is called when the last window in the grid is deleted
clears window_selectors vector of the grids before calling CancleSelection.
CancelSelection calls WindowGrid::Shutdown on the elements in the vector
of grids, but since OnGridEmpty clears the vector, the grids do not get
Shutdown, by passing some cleanup such as unblurring wallpaper. Manually
call Shutdown in OnGridEmpty.

Test: manual
Bug: 812001
Change-Id: Ic22fc64b522211ab78d8e9d40e42f7fc6fd3a4b8
Reviewed-on: https://chromium-review.googlesource.com/917219
Reviewed-by: Mitsuru Oshima (In Tokyo) <oshima@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536583}
Former-commit-id: 97dd13e47b5e241a777ce3f49352d9a4976447f1